--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,6 @@
     </head>
     <body style="background: #f9f9f9;">
         <div id="app"></div>
-        <script type="module" src="./demo/main.ts"></script>
+        <script type="module" src="./main.ts"></script>
     </body>
 </html>
